change garden module button from berries to plants
I believe that this will make it easier to differentiate between the normal Strawberi Button, which just means "yes, do this thing," and the button that specifically opens the menu to plant a new berry.

--- a/Strawberi.css
+++ b/Strawberi.css
@@ -183,13 +183,13 @@ button#waterall::before {
 }
 
 button#plantberry:not([disabled])::before {
-  content: "🍓";
+  content: "🌱";
   /*Load between the previous button and the next button.*/
   z-index: 10;
 }
 
 button#plantsame:not([disabled])::before {
-  content: "🍓🍓🍓";
+  content: "🌱🌱🌱";
 }
 
 
