update dialog module for easy field transfers

--- a/Strawberi.css
+++ b/Strawberi.css
@@ -369,7 +369,7 @@ button[data-action="declinegift"]::before {
 
 .dialog:has(#massreleaselist.bulkpokemonlist) button::before,
 .dialog button[data-cancelbutton="1"]::before,
-.dialog button[data-field]::before {
+.dialog button[data-field]:not([data-field="0"])::before {
   content: none!important;
 }
 
